force-app/main/default/objects/Settlement_Plan_Item__c/Settlement_Plan_Item__c.object-meta.xml
<CustomObject>
    <label>Settlement Plan Item</label>
    <nameField>
        <displayFormat>SPI-{00000000}</displayFormat>
        <label>Settlement Plan Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>