force-app/main/default/objects/Settlement_Plan_Item__c/fields/Actual_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Payment_Date__c</fullName>
    <label>Actual Payment Date</label>
    <type>Date</type>
</CustomField>