force-app/main/default/objects/Settlement_Plan_Item__c/fields/Escrow_Balance__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Balance__c</fullName>
    <label>Escrow Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>