force-app/main/default/objects/Settlement_Plan_Item__c/fields/Is_Escrow_Shortage__c.field-meta.xml
<CustomField>
    <fullName>Is_Escrow_Shortage__c</fullName>
    <formula>Escrow_Balance__c &lt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Escrow Shortage</label>
    <type>Checkbox</type>
</CustomField>