force-app/main/default/objects/Settlement_Plan_Item__c/fields/Original_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Payment_Date__c</fullName>
    <label>Original Payment Date</label>
    <type>Date</type>
</CustomField>