force-app/main/default/objects/Settlement_Plan_Item__c/fields/Rollup_Commission_Fee__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Commission_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DLRS-managed rollup: Sum of Amount from Fee/Settlement Details where Type = Commission Fee</description>
    <label>Rollup Commission Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>