force-app/main/default/objects/Settlement_Plan_Item__c/fields/Settlement_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Identifier__c</fullName>
    <label>Settlement Identifier</label>
    <type>TextArea</type>
</CustomField>