force-app/main/default/objects/Settlement_Plan_Item__c/fields/Settlement_Segment__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Segment</label>
    <referenceTo>Settlement_Segment__c</referenceTo>
    <relationshipLabel>Settlement Plan Items</relationshipLabel>
    <relationshipName>Settlement_Plan_Items</relationshipName>
    <type>Lookup</type>
</CustomField>