force-app/main/default/objects/Settlement_Plan_Item__c/fields/Skip_Payment__c.field-meta.xml
<CustomField>
    <fullName>Skip_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Payment</label>
    <type>Checkbox</type>
</CustomField>