force-app/main/default/objects/Settlement_Plan_Item__c/fields/Total_EPPS_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_EPPS_Fee__c</fullName>
    <formula>NULLVALUE( Rollup_EPPS_Fee__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total EPPS Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>