force-app/main/default/objects/Settlement_Plan_Item__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <description>Sum of Commission Fee, Bank Fee, and EPPS Fee rollups</description>
    <formula>Rollup_Commission_Fee__c + Rollup_Bank_Fee__c + Rollup_EPPS_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>