force-app/main/default/objects/Settlement_Plan_Item__c/fields/Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment__c</fullName>
    <formula>Rollup_Payment_Amount__c + Total_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>